syntax = "proto3";

package pb;

option go_package = "github.com/g41797/memphisgrpc;pb";

option php_namespace = "g4197\\memphisphp\\pb";
option php_metadata_namespace = "g4197\\memphisphp\\metadata";

import "status.proto";
import "station.proto";
import "stop.proto";
import "msg.proto";

message Consumer {
	string name = 1;
}

message CreateConsumerRequest {
	Station station = 1;
	Consumer consumer = 2;
}

message ConsumeMessages {
	oneof data {
		CreateConsumerRequest start = 1;
		Stop stop = 2;
	}
}

message Wakeup {}


message ConsumeResponse {
	oneof data {
		Msg msg = 1;
		Status status = 2;
		Wakeup wakeup = 3;
	};
}
